--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Gabriel C. Rau</h1>
+<p>Publications</p>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fraw.githubusercontent.com%2Fgcrau%2Fgcrau.github.io%2Fmaster%2Fbibtex%2Fgabriel-c-rau-published.bib&jsonp=1"></script> 
 </body>
 </html>
